# Spectrum

./: CMakeLists.txt  PreLoad.cmake  README.md
include/: Processing.h  Spectrum.h
src/: Processing.cpp
